# minesweeper-solver

./: .clang-tidy  .gitignore  .orthodoxy.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile
.claude/commands/: ci-rescue.md
.claude/skills/rescuing-ci-failures/: SKILL.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  Formatting.cmake  Orthodoxy.cmake  StaticAnalysis.cmake
docs/superpowers/plans/: 2026-06-01-reasoning-companion-window.md  2026-06-01-refactor-top3-smells.md
docs/superpowers/specs/: 2026-05-31-engine-accuracy-gaussian-reduction-design.md  2026-05-31-infogain-guess-policy-design.md  2026-05-31-smarter-guess-policy-design.md  2026-05-31-solver-benchmark-baseline.md  2026-05-31-solver-benchmark-harness-design.md  2026-05-31-solver-benchmark-harness-execution-plan.md  2026-06-01-normalized-double-engine-rewrite-design.md  2026-06-01-reasoning-companion-window-design.md
include/solver/: .orthodoxy.yml  app.h  difficulty.h  engine.h  ereal.h  geom.h  overlay.h  overlay_geom.h  reasoning.h  reasoning_panel.h  recommend.h  util.h
profiling/: .gitignore  README.md
profiling/scripts/: analyze_profile.sh
src/: .orthodoxy.yml  CMakeLists.txt  main.cc
src/app/: app.cc
src/bench/: args.cc  args.h  main.cc  metrics.cc  metrics.h  policy.cc  policy.h  policy_heuristic.cc  policy_heuristic.h  policy_infogain.cc  policy_infogain.h  policy_tuning.h  runner.cc  runner.h
src/engine/: engine.cc  engine_internal.h  engine_reduce.cc  engine_scratch.h  rational.h  recommend.cc
src/overlay/: overlay.cc  overlay_geom.cc  reasoning.cc  reasoning_panel.cc
src/profiler/: main.cc
tests/: CMakeLists.txt  bench_cli_test.cc  bench_metrics_test.cc  bench_policy_heuristic_test.cc  bench_policy_infogain_test.cc  bench_policy_test.cc  bench_runner_test.cc  bench_test.cc  engine_emulated_test.cc  engine_exact_test.cc  engine_infogain_test.cc  engine_largeN_test.cc  engine_reduction_test.cc  engine_test.cc  golden_test.cc  overlay_test.cc  rational_test.cc  reasoning_test.cc  recommend_test.cc
